Bug 517599 - OBS crashes in KStatusNotifierItem::~KStatusNotifierItem on close
Summary: OBS crashes in KStatusNotifierItem::~KStatusNotifierItem on close
Status: RESOLVED FIXED
Alias: None
Product: plasma-integration
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-15 12:52 UTC by blackvieow@gmail.com
Modified: 2026-03-26 20:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description blackvieow@gmail.com 2026-03-15 12:52:25 UTC
framework-kstatusnotifieritem
           PID: 358457 (obs)
           UID: 1000 (r3dm1)
           GID: 1000 (r3dm1)
        Signal: 11 (SEGV)
     Timestamp: Sun 2026-03-15 15:44:34 MSK (1min 22s ago)
  Command Line: obs
    Executable: /app/bin/obs
 Control Group: /user.slice/user-1000.slice/user@1000.service/app.slice/app-flatpak-com.obsproject.Studio-358444.scope
          Unit: user@1000.service
     User Unit: app-flatpak-com.obsproject.Studio-358444.scope
         Slice: user-1000.slice
     Owner UID: 1000 (r3dm1)
       Boot ID: e80cd90a550e4b24b4d29f0f6e2aa84b
    Machine ID: 94d82221c6ff4f2296243b55247690c3
      Hostname: r3dm1-ms7673
       Storage: /var/lib/systemd/coredump/core.obs.1000.e80cd90a550e4b24b4d29f0f6e2aa84b.358457.1773578674000000.zst (present)
  Size on Disk: 20.0M
       Message: Process 358457 (obs) of user 1000 dumped core.
                
                Stack trace of thread 2:
                #0  0x00007fafdeaaca04 n/a (/usr/lib/x86_64-linux-gnu/libKF6StatusNotifierItem.so.6.18.0 + 0x1da04)
                #1  0x00007fafdeaacd15 n/a (/usr/lib/x86_64-linux-gnu/libKF6StatusNotifierItem.so.6.18.0 + 0x1dd15)
                #2  0x00007fafdeee771f n/a (/usr/lib/plugins/platformthemes/KDEPlasmaPlatformTheme6.so + 0x4671f)
                #3  0x00007fafe72a1a57 n/a (/usr/lib/x86_64-linux-gnu/libQt6Widgets.so.6.8.3 + 0x2a1a57)
                #4  0x00007fafe72a1a85 n/a (/usr/lib/x86_64-linux-gnu/libQt6Widgets.so.6.8.3 + 0x2a1a85)
                #5  0x0000631a9a8f3a70 n/a (/app/bin/obs + 0x2c0a70)
                #6  0x0000631a9a8f4da5 n/a (/app/bin/obs + 0x2c1da5)
                #7  0x00007fafe5ff64ce n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.8.3 + 0x1f64ce)
                #8  0x00007fafe71a04f8 n/a (/usr/lib/x86_64-linux-gnu/libQt6Widgets.so.6.8.3 + 0x1a04f8)
                #9  0x00007fafe5f9e050 n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.8.3 + 0x19e050)
                #10 0x00007fafe5fa1a12 n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.8.3 + 0x1a1a12)
                #11 0x00007fafe62b3b5f n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.8.3 + 0x4b3b5f)
                #12 0x00007fafe33383d6 n/a (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0.8200.5 + 0x633d6)
                #13 0x00007fafe3399047 n/a (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0.8200.5 + 0xc4047)
                #14 0x00007fafe3337863 n/a (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0.8200.5 + 0x62863)
                #15 0x00007fafe62b32b3 n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.8.3 + 0x4b32b3)
                #16 0x00007fafe5fab453 n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.8.3 + 0x1ab453)
                #17 0x00007fafe5fa6a2e n/a (/usr/lib/x86_64-linux-gnu/libQt6Core.so.6.8.3 + 0x1a6a2e)
                #18 0x0000631a9a716536 n/a (/app/bin/obs + 0xe3536)
                #19 0x00007fafe582b3c8 n/a (/usr/lib/x86_64-linux-gnu/libc.so.6 + 0x2a3c8)
                #20 0x00007fafe582b48b n/a (/usr/lib/x86_64-linux-gnu/libc.so.6 + 0x2a48b)
                #21 0x0000631a9a717a45 n/a (/app/bin/obs + 0xe4a45)
                ELF object binary architecture: AMD x86-64
Comment 1 Tobias Fella 2026-03-16 00:08:38 UTC
This report is unfortunately missing crucial information. please have a look at /How_to_create_useful_crash_reports_( and add as much information as possible. Thanks!
Comment 2 Nicolas Fella 2026-03-24 14:31:01 UTC
See https://github.com/obsproject/obs-studio/pull/12951
Comment 3 Bug Janitor Service 2026-03-24 14:36:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-integration/-/merge_requests/210
Comment 4 Nicolas Fella 2026-03-26 20:04:56 UTC
Git commit 7179a7273e1db754ad50eb9c8f1ea1cbbeb83cd4 by Nicolas Fella.
Committed on 26/03/2026 at 20:02.
Pushed by nicolasfella into branch 'master'.

systemtray: Don't delete KSNI menu

KStatusNotifierItem::setContextMenu takes ownership of the menu, we must not delete it ourselves

M  +21   -0    qt5/autotests/ksni_unittest.cpp
M  +0    -7    qt5/src/platformtheme/kdeplatformsystemtrayicon.cpp
M  +0    -1    qt5/src/platformtheme/kdeplatformsystemtrayicon.h
M  +21   -0    qt6/autotests/ksni_unittest.cpp
M  +0    -7    qt6/src/platformtheme/kdeplatformsystemtrayicon.cpp
M  +0    -1    qt6/src/platformtheme/kdeplatformsystemtrayicon.h

https://invent.kde.org/plasma/plasma-integration/-/commit/7179a7273e1db754ad50eb9c8f1ea1cbbeb83cd4
Comment 5 Nicolas Fella 2026-03-26 20:05:37 UTC
Git commit 2a3a3071556acd09d67175143fe475e36fff8b56 by Nicolas Fella.
Committed on 26/03/2026 at 20:05.
Pushed by nicolasfella into branch 'Plasma/6.6'.

systemtray: Don't delete KSNI menu

KStatusNotifierItem::setContextMenu takes ownership of the menu, we must not delete it ourselves
(cherry picked from commit 7179a7273e1db754ad50eb9c8f1ea1cbbeb83cd4)

M  +21   -0    qt5/autotests/ksni_unittest.cpp
M  +0    -7    qt5/src/platformtheme/kdeplatformsystemtrayicon.cpp
M  +0    -1    qt5/src/platformtheme/kdeplatformsystemtrayicon.h
M  +21   -0    qt6/autotests/ksni_unittest.cpp
M  +0    -7    qt6/src/platformtheme/kdeplatformsystemtrayicon.cpp
M  +0    -1    qt6/src/platformtheme/kdeplatformsystemtrayicon.h

https://invent.kde.org/plasma/plasma-integration/-/commit/2a3a3071556acd09d67175143fe475e36fff8b56