systemtray: Don't delete KSNI menu

KStatusNotifierItem::setContextMenu takes ownership of the menu, we must not delete it ourselves

BUG: 517599